syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bank.service";

message BalanceCheckRequest {
  int32 acc_no = 1;
}

message Balance {
  int32 amount = 1;
}

service BankService {
  rpc getBalance(BalanceCheckRequest) returns (Balance);
}